# ornl-dsse-gnwls

./: .gitignore  Dockerfile  README.md  component_definition.json  pyproject.toml  schema.json
scenarios/: components_integration.json  ieee123_dsse.json
src/dsse_federate/: __init__.py  dsse_federate.py  server.py  wls_estimator.py
tests/: test_dsse.py
